redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-andra
spec:
  selector:
    matchLabels:
      app: redis-stedi-andra
  serviceName: redis-stedi-andra
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-andra
    spec:
      containers:
        - name: redis-stedi-andra
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass","$(REDIS_PASS)","--appendonly","yes","--save","900","1","--save","30","2"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-andra-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-andra-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  # Name of service
  name: redis-stedi-andra
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-andra
