app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cit270andraservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cit270andraservice
  template:
    metadata:
      name: cit270andraservice
      labels:
        app: cit270andraservice
    spec:
      containers:
      - name: cit270andraservice
        image: gcr.io/united-aviary-379820/andra-api
        volumeMounts:
        - name: ssl
          mountPath: "/etc/letsencrypt/live/andrahale.cit270.com/"
        command: ["npm"]
        args: ["run", "start"]
        resources:
          requests:
            cpu: 0.125
            memory: 500Mi
          limits:
            cpu: 0.125
            memory: 600Mi
        imagePullPolicy: Always
      volumes:
      - name: ssl
        secret:
          secretName: andracerts
---
apiVersion: v1
kind: Service
metadata:
  name: stedi-andrahale-nodeport
spec:
  selector:
    app: cit270andraservice
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-andrahale-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cit270andra
    networking.gke.io/managed-certificates: stedi-andrahale-certificate
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stedi-andrahale-nodeport
            port:
              number: 80
